src/objects/Configuracion_VDN__mdt.object
<CustomObject>
    <fields>
        <fullName>Distancia_prioridad__c</fullName>
        <label>Distancia prioridad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoadId__c</fullName>
        <label>LoadId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceId__c</fullName>
        <label>ServiceId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VDN_Number__c</fullName>
        <label>VDN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Configuracion VDN</label>
    <pluralLabel>Configuraciones VDN</pluralLabel>
</CustomObject>